--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>첫번째 프로젝트</h1>
-    <p> 내가 생각하는 속도를 손이 못따라가~~ </p>
-</body>
+    <p>내가 생각하는 속도를 손이 못따라가 깃은 처음인데 <br>
+        잘 따라 해보자고 
+        아니 근데 나 새로운 commit 있다고오오옹
+    </p>
+    
+  </body>
 </html>
